--- a/app/views/pages/evaluator.html.haml
+++ b/app/views/pages/evaluator.html.haml
@@ -52,6 +52,14 @@
                       Consultant at a Global Consulting Firm
                   .picture
                     = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/testimonial+images/val.jpg", class: "img-circle"
+        .clear_floats
+        .click-it.top.bottom{ style: "margin: -8px 0 10px 0;"}
+          .holder
+            %p 
+              %span Guaranteed
+              to improve your hiring accuracy and eliminate bad interviewees... or your money back.
+            .big_submit_button
+              = link_to "SIGN UP!", evaluator_pricing_url, class: "submit_button"
         .sexy_time 
           %section 
             .holder  
@@ -106,6 +114,13 @@
                   Know for certain when a candidate is deserving of an interview. Examine their performance, drill down into responses, and see how they stack-up against their peers.  
               .image.right{ style: "width: 55%; margin-top:11px;" } 
                 %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Screenshots/grade5.png"} 
+        .click-it.top.bottom{ style: "margin: 10px 0 65px;"}
+          .holder
+            %p 
+              %span Guaranteed
+              to improve your hiring accuracy and eliminate bad interviewees... or your money back.
+            .big_submit_button
+              = link_to "SIGN UP!", evaluator_pricing_url, class: "submit_button"
         .area.pitch_tiles{ style: "margin-top:0; "} 
           %h2 Why you'll love MetaBright 
           .tile 
@@ -136,69 +151,7 @@
               %img{ src: "https://s3-us-west-1.amazonaws.com/moonlite/static/manager.png" }
           %a.carousel-control.left{"data-slide" => "prev", :href => "#screen_carousel"} ‹ 
           %a.carousel-control.right{"data-slide" => "next", :href => "#screen_carousel"} ›
-        #prices.area
-          %h2{ style: "margin-bottom: 17px;" }  
-            Evaluator Pricing 
-          .free_trial 
-            %h1 All plans come with a FREE 14-day trial.
-            %p No risk. No obligation. If at any point during your first 14 days you don't think the Evaluator is right for your company, just cancel your subscription. Your credit card won't ever be charged. 
-          %div   
-            %ul.pricing_table 
-              %li.price_block 
-                %h3 1 Admin 
-                .price 
-                  .price_figure 
-                    %span.price_number $19.99 
-                    %span.price_tenure per month 
-                %ul.features 
-                  %li Unlimited Evaluations
-                  %li Unlimited Candidates 
-                  %li{ style: "padding: 25px 15px;" } Email Support
-                .price_footer 
-                  = link_to "Start Free Trial", new_group_path(p: Group::SINGLE_PLAN), class: "action_button" 
-              %li.price_block.popular 
-                %h3  
-                  %div Most Popular
-                  2-5 Admins 
-                .price 
-                  .price_figure 
-                    %span.price_number $29.99 
-                    %span.price_tenure per month 
-                %ul.features 
-                  %li Unlimited Evaluations
-                  %li Unlimited Candidates 
-                  %li Premium Phone and Email Support
-                .price_footer 
-                  = link_to "Start Free Trial", new_group_path(p: Group::TWO_TO_FIVE_PLAN), class: "action_button" 
-              %li.price_block 
-                %h3 6-15 Admins 
-                .price 
-                  .price_figure 
-                    %span.price_number $49.99 
-                    %span.price_tenure per month 
-                %ul.features 
-                  %li Unlimited Evaluations
-                  %li Unlimited Candidates 
-                  %li Premium Phone and Email Support
-                .price_footer 
-                  = link_to "Start Free Trial", new_group_path(p: Group::SIX_TO_FIFTEEN_PLAN), class: "action_button" 
-              %li.price_block 
-                %h3 16-50 Admins 
-                .price 
-                  .price_figure 
-                    %span.price_number $89.99 
-                    %span.price_tenure per month 
-                %ul.features 
-                  %li Unlimited Evaluations
-                  %li Unlimited Candidates  
-                  %li Premium Phone and Email Support
-                .price_footer 
-                  = link_to "Start Free Trial", new_group_path(p: Group::SIXTEEN_TO_FIFTY_PLAN), class: "action_button" 
-            %div.sales_help_inline{ style: "margin-top: -30px; "} 
-              %p{ style: "margin: 0; float: right;"} 
-                Have more than 50 admins?  
-                %a{ onclick: "$('.sales_help_modal').modal({keyboard: true, show: true})" }Contact us for pricing. 
-        .area{ style: "margin-top: 110px;"} 
+        .area{ style: "margin-top: 75px;"} 
           %h2{ style: "margin-bottom: 0;"} 
             Our philosophy 
           %p.be_bold
@@ -208,41 +161,48 @@
           #faq_accordion.accordion           
             .accordion-group 
               .accordion-heading 
-                %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseTwo"} 
+                %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseOne"} 
                   How are my candidates evaluated? 
-              #collapseTwo.accordion-body.collapse.in
+              #collapseOne.accordion-body.collapse.in
                 .accordion-inner 
                   We evaluate your candidates with things called <strong>Challenges</strong> -- fancy quizzes that analyze people's raw knowledge, their creative ability, and what they’ve accomplished. 
                   We distill all this information down into one easy to understand percentile ranking that indicates how capable a candidate actually is. 
             .accordion-group 
               .accordion-heading 
-                %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseFour"} 
+                %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseTwo"} 
                   How long will it take for my candidates to complete a Challenge? 
-              #collapseFour.accordion-body.collapse 
+              #collapseTwo.accordion-body.collapse 
                 .accordion-inner 
                   It depends on the Challenge, and the skill of the candidate, but most Challenges can be completed in under 20 minutes.
             .accordion-group 
               .accordion-heading 
-                %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseFour"} 
+                %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseThree"} 
                   Do I have to sign up for a contract or pre-pay for my Evaluator subscription? 
-              #collapseFour.accordion-body.collapse 
+              #collapseThree.accordion-body.collapse 
                 .accordion-inner 
                   Nope! Evaluator subscriptions are month-to-month. There are no contracts or obligations to continue your membership any longer than you want. You'll be billed monthly and can cancel anytime.
             .accordion-group 
               .accordion-heading 
-                %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseFive"} 
+                %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseFour"} 
                   How does MetaBright work to prevent cheating? 
-              #collapseFive.accordion-body.collapse 
+              #collapseFour.accordion-body.collapse 
                 .accordion-inner 
                   MetaBright questions are timed so we have a good understanding of who actually knows the material and who is trying to cheat (or who is getting lucky with a guess!).  
                   Our algorithms look for irregularities when a candidate is taking a Challenge and adjust their percentile accordingly. 
                   We also work to ensure that your candidate is actually the one taking the Challenge. 
             .accordion-group 
               .accordion-heading 
-                %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseSix"} 
+                %a.accordion-toggle{"data-parent" => "#faq_accordion", "data-toggle" => "collapse", "data-parent" => "true", :href => "#collapseFive"} 
                   Why does MetaBright look so playful? 
-              #collapseSix.accordion-body.collapse 
+              #collapseFive.accordion-body.collapse 
                 .accordion-inner 
                   We’ve found that people are more likely to stay engaged with a Challenge when incentives are in place to make the process feel like a game.  
                   This means we can evaluate your candidates with a higher degree of confidence and we can deliver more examples of their abilities! 
+        .click-it.top{ style: "padding-bottom: 58px; margin-bottom: -11px;"}
+          .holder
+            %p 
+              %span Guaranteed
+              to improve your hiring accuracy and eliminate bad interviewees... or your money back.
+            .big_submit_button
+              = link_to "SIGN UP!", evaluator_pricing_url, class: "submit_button"
         
