--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -63,7 +63,7 @@
               %a.explore_link
                 = image_tag NAVBAR_EXPLORE, style: "", alt: "Explore"
                 %span Explore
-            - if current_user.earned_points > 1500
+            - if current_user.earned_points > 1500 or Rails.env != "production"
               %li.navitem{ title: "Create", style: "height: 100%;" }
                 = link_to paths_path do
                   = image_tag NAVBAR_CREATE, style: "", alt: "Create"
