Fixing start url.

--- a/app/views/paths/new.html.haml
+++ b/app/views/paths/new.html.haml
@@ -10,7 +10,7 @@
       %h1{ style: "display: inline; vertical-align: middle; font-size:50px;" } Create a Challenge
     
     %div{ style: "width: 86%; text-align: center; margin: 20px auto 0 auto; padding: 0 7% 0 7%;" }
-      = form_for(@path, url: start_path_path) do |f|
+      = form_for(@path, url: start_paths_path) do |f|
         %div{ style: "text-align: center; margin: 10px auto;" }
           %div.action_group.challenge_naming
             %h3 Give your Challenge a name:
