--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -16,3 +16,4 @@
 %meta{ property: "og:description", content: "#{social_description}" } 
 %meta{ property: "og:image", content: "#{social_image}" }
 -#%script{ src: "/assets/ace/src-min-noconflict/ace.js", type: "text/javascript", charset: "utf-8" }
+<!--start of Offerchat js code--><script type='text/javascript'>var ofc_key = 'a09a94ae84320c54360cb2d830f86383';(function(){  var oc = document.createElement('script'); oc.type = 'text/javascript'; oc.async = true;  oc.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'd1cpaygqxflr8n.cloudfront.net/p/js/widget.min.js?r=1';  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(oc, s);}());</script><!--end of Offerchat js code-->
