Fixing fonts and excluding locked users.

--- a/app/views/groups/_account_table.html.haml
+++ b/app/views/groups/_account_table.html.haml
@@ -1,5 +1,5 @@
 :css
-  input, select { font-family: 'MuliLight'; }
+  input, select { font-family: 'MuliLight', "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
 :javascript
   $(".edit_user_details_link").each(function(){
