removed zopim, got offerchat working, renamed pricing, muli fonts now ref s3

--- a/app/assets/stylesheets/font.css.scss
+++ b/app/assets/stylesheets/font.css.scss
@@ -20,9 +20,16 @@
 
 @font-face {
     font-family: 'MuliLight';
-    src: url('font/Muli-Light.eot');
-    src: url('font/Muli-Light.woff') format('woff'),
-         url('font/Muli-Light.ttf') format('truetype');
+    src: url('https://s3.amazonaws.com/moonlite-nsdub/static/Fonts/Muli-Light.eot');
+    src: url('https://s3.amazonaws.com/moonlite-nsdub/static/Fonts/Muli-Light.woff') format('woff'),
+         url('https://s3.amazonaws.com/moonlite-nsdub/static/Fonts/Muli-Light.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'MuliLightItalic';
+    src: url('https://s3.amazonaws.com/moonlite-nsdub/static/Fonts/Muli-LightItalic.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
