--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -21,6 +21,9 @@ pre.unstyled { padding: 0px; background-color: inherit; border: 0px; word-break:
   &:active{ position: relative; top: 1px; }
 }
 .clear_floats { clear: both;}
+/* Offerchat box sizing */
+#offerchatbox{ width: 260px !important;}
+.widget-box {width: 260px !important;}
 
 /* Stream/Revolution */
 .newsfeed h4{ margin:9px 10px 10px 10px; font: 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height:10%; letter-spacing:0.15em; color:#fff; text-shadow:1px 1px 0 rgb(0,0,0); }
