--- a/app/views/groups/signup/form.html.haml
+++ b/app/views/groups/signup/form.html.haml
@@ -113,7 +113,7 @@
         %p.errors= @errors
         .control-group
           %p.in-progress.hide Creating your account now. This may take a minute or two...
-          = link_to evaluator_pricing_url do
+          = link_to pricing_url do
             = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/random+icons/back.png", class: "gear", title: "back"
           = f.submit "Start My Free Trial", class: "submit_button", style: "width: inherit;"
       %h3{ style: "margin-top: 20px;"} Common Questions
