--- a/app/views/pages/pricing.html.haml
+++ b/app/views/pages/pricing.html.haml
@@ -4,7 +4,7 @@
   .aboutcontainer{ width: 980px; background: rgba(36, 72, 109, 0.8); border-radius: 0; margin-top:27px;} 
   .aboutbox { border-radius: 0; padding: 20px 20px 0; } 
   
-#employer_product.aboutcontainer
+#employer_product.aboutcontainer{ "data-no-turbolink" => true }
   .aboutbox
     .body
       %div
