--- a/app/views/layouts/_styles_and_scripts.html.haml
+++ b/app/views/layouts/_styles_and_scripts.html.haml
@@ -98,13 +98,19 @@
     return true;
   });
 
-/ Heatmatic Heat map tool /
 - if not current_user and params[:action] == "evaluator"
-  :javascript
-    //heatmatic_token = '1131478311215069';
-    heatmatic_token = '1276372374249857';
-    s = document.createElement("script"); s.setAttribute("type", "text/javascript")
-    s.setAttribute("src", "https://s3-us-west-1.amazonaws.com/heatmatic/heatmatic.js");
-    document.body.appendChild(s);
+  / Heatmatic Heat map tool /
+  - if Rails.env == "development"
+    :javascript
+      heatmatic_token = '1131478311215069';
+      s = document.createElement("script"); s.setAttribute("type", "text/javascript")
+      s.setAttribute("src", "http://localhost:3000/assets/heatmatic.js");
+      document.body.appendChild(s);
+  - else
+    :javascript
+      heatmatic_token = '1276372374249857';
+      s = document.createElement("script"); s.setAttribute("type", "text/javascript")
+      s.setAttribute("src", "https://s3-us-west-1.amazonaws.com/heatmatic/heatmatic.js");
+      document.body.appendChild(s);
     
 = render "layouts/custom_styles"
