--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,8 @@
   %head
     = render "layouts/head"
   %body{ class: "#{'employer' if hide_background}"}
-    = google_tag_manager 
+    - unless request.url.include?("hmrm=pre")
+      = google_tag_manager 
     - if current_user
       - if @path and @current_section
         = render "modals/launchpad"
