--- a/app/views/pages/upheaval.html.haml
+++ b/app/views/pages/upheaval.html.haml
@@ -29,7 +29,7 @@
                 %button.button
                   %a{:href => "#", :onclick => "goto('#consumer_slide', this); return false"} Get Started
             .row-fluid.employer
-              .option
+              .option{ "data-no-turbolink" => true } 
                 %h4 I want to test my candidates.
                 %p The MetaBright Evaluator validates the skills of your job candidates before you interview them.
                 %button.button
