--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -107,6 +107,7 @@ $landing_green: #73bb6e;
       
       .explore_link { float: right; }
       .back { float: left; }
+      .more { float: right; font-size: 18px; }
       
       img { display: inline; }
     }
