changing /challenges to remove empty personas, button style on landing

--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -106,8 +106,8 @@ $landing_green: #73bb6e;
       padding: 0 8px;
       
       .explore_link { float: right; }
-      .back { float: left; }
-      .more { float: right; font-size: 18px; }
+      .back { float: left; font-size: 16px; margin-top: 6px;}
+      .more { float: right; font-size: 16px; }
       
       img { display: inline; }
     }
